# horovod

./: .travis.yml  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.test.cpu  Dockerfile.test.gpu  docker-compose.test.yml
.buildkite/: gen-pipeline.sh
cmake/Modules/: FindMxnet.cmake  FindPaddlePaddle.cmake
docs/: contributors.rst
horovod/paddlepaddle/: CMakeLists.txt  __init__.py  adapter.cc  adapter.h  cuda_util.cc  cuda_util.h  handle_manager.cc  handle_manager.h  mpi_ops.cc  ready_event.cc  ready_event.h  tensor_util.cc  tensor_util.h
test/single/: test_buildkite.py
test/single/data/: expected_buildkite_pipeline.yaml
